--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,10 @@
   }
 }
 
-amplify-authenticator {
+/* amplify-authenticator {
   display: flex;
   justify-content: center;
   align-items: center;
   flex: 1;
   height: 100vh;
-}
+} */
